--- a/chickenApp/Base.lproj/Main.storyboard
+++ b/chickenApp/Base.lproj/Main.storyboard
@@ -705,6 +705,21 @@
             </objects>
             <point key="canvasLocation" x="1405.7971014492755" y="81.696428571428569"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Ts4-Mv-YrC">
+            <objects>
+                <viewController id="0hv-9V-N2K" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ACo-hn-fqE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="36w-eR-6rB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DO6-2l-doB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="729" y="732"/>
+        </scene>
         <!--Help Screen-->
         <scene sceneID="lRE-05-fh6">
             <objects>
@@ -720,7 +735,7 @@
                                     <constraint firstAttribute="width" constant="374" id="Bmj-P5-MFm"/>
                                     <constraint firstAttribute="height" constant="547" id="JYR-98-B0v"/>
                                 </constraints>
-                                <mutableString key="text">Changing Location of Chicken:  - Select what type of chicken is being changed - Select the number corresponding with the case of chicken  Undoing Actions:  - Make sure they type of chicken that is selected and they type of chicken being undone is the same - Press the undo button until all actions are undone  Checking Date and Time of Changes:  - Move to the main screen - Press the "Logs" button - The date and time of recent changes will be displayed</mutableString>
+                                <string key="text">Changing Location of Chicken:  - Select what type of chicken is being changed - Select the number corresponding with the case of chicken  Undoing Actions:  - Make sure they type of chicken that is selected and they type of chicken being undone is the same - Press the undo button until all actions are undone  Checking Date and Time of Changes:  - Move to the main screen - Press the "Logs" button - The date and time of recent changes will be displayed</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -737,7 +752,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OeX-Fr-FE4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="728.98550724637687" y="745.98214285714278"/>
+            <point key="canvasLocation" x="1406" y="732"/>
         </scene>
         <!--View Controller4-->
         <scene sceneID="1dr-NG-ccC">
@@ -1348,7 +1363,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nSN-qC-1Az" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1406" y="746"/>
+            <point key="canvasLocation" x="2094" y="82"/>
         </scene>
         <!--View Controller2-->
         <scene sceneID="AQK-1W-4OF">
