--- a/chickenApp/Base.lproj/Main.storyboard
+++ b/chickenApp/Base.lproj/Main.storyboard
@@ -56,6 +56,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Logs"/>
                                 <connections>
+                                    <action selector="lButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jHN-jz-idm"/>
                                     <action selector="logButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zz2-VY-WiI"/>
                                 </connections>
                             </button>
@@ -86,11 +87,89 @@
                     <connections>
                         <segue destination="SD3-5B-G0c" kind="show" identifier="cabinetSegue" id="JAs-mF-5Gr"/>
                         <segue destination="19L-Et-4Mw" kind="show" identifier="helpSegue" id="CAo-nr-IVN"/>
+                        <segue destination="dUY-En-bhJ" kind="show" identifier="tracka" id="3ym-zL-hsM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="728.98550724637687" y="81.696428571428569"/>
+        </scene>
+        <!--Tracker View Controller-->
+        <scene sceneID="inL-Jr-131">
+            <objects>
+                <viewController id="dUY-En-bhJ" customClass="TrackerViewController" customModule="chickenApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AGc-Qa-vP3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="35D-G6-wHG">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="96" id="cHZ-hT-9Vo" customClass="CustomCell" customModule="chickenApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="96"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cHZ-hT-9Vo" id="Eyc-eY-7Yh">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Case #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYw-tj-cXK">
+                                                    <rect key="frame" x="20" y="0.0" width="193" height="46"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TC -&gt; BT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUz-hD-MRR">
+                                                    <rect key="frame" x="20" y="54" width="193" height="42"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKy-b4-eji">
+                                                    <rect key="frame" x="257" y="0.0" width="137" height="32"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kxs-tG-UIU">
+                                                    <rect key="frame" x="257" y="54" width="137" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateOut" destination="eKy-b4-eji" id="EbL-v3-TSF"/>
+                                            <outlet property="numOut" destination="wYw-tj-cXK" id="cxA-IQ-AA2"/>
+                                            <outlet property="pathOut" destination="SUz-hD-MRR" id="qqJ-mJ-xu2"/>
+                                            <outlet property="timeOut" destination="kxs-tG-UIU" id="Phu-V6-9Bg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="EE4-oA-jsU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EE4-oA-jsU" firstAttribute="trailing" secondItem="35D-G6-wHG" secondAttribute="trailing" id="Gzh-5W-UIy"/>
+                            <constraint firstItem="EE4-oA-jsU" firstAttribute="bottom" secondItem="35D-G6-wHG" secondAttribute="bottom" id="XLO-qc-MvL"/>
+                            <constraint firstItem="35D-G6-wHG" firstAttribute="top" secondItem="EE4-oA-jsU" secondAttribute="top" id="lS8-hh-l5s"/>
+                            <constraint firstItem="35D-G6-wHG" firstAttribute="leading" secondItem="EE4-oA-jsU" secondAttribute="leading" id="qYn-uK-1cD"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="pdS-AN-xxv"/>
+                    <connections>
+                        <outlet property="tableViewOut" destination="35D-G6-wHG" id="gI0-vx-g8k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="388-0c-PUB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1018.840579710145" y="740.625"/>
         </scene>
         <!--View Controller3-->
         <scene sceneID="zm7-ML-PzF">
